[package]
name = "trunkfun"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
console_error_panic_hook = "0.1.7"
delegate = "0.13.4"
js-sys = "0.3.77"
str_indices = "0.4.4"
web-sys = { version = "0.3.77", features = ["Text", "Element", "HtmlDivElement", "Window", "Document", "console", "HtmlBodyElement", "NodeList", "HtmlBrElement", "HtmlSpanElement", "HtmlParagraphElement", "HtmlElement"] }
